k8s/server/postgres-ks.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/rev: asm-managed
  name: server
spec: {}
status: {}
