k8s/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: server
  name: server
  namespace: server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  strategy: {}
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        securityContext:
          runAsUser: 5678
        image: northamerica-northeast1-docker.pkg.dev/phx-01h4rr1468rj3v5k60b1vserd3/cpho-phase2-artifact-registry-for-cloud-run/cpho-phase2@sha256:98af5eae23ecf51b95a6ca5b03d00e01da4bb80dd2a364a74ee5c3444c676b51 
        resources:
          limits:
            cpu: 300m
            memory: 70Mi
          requests:
            cpu: 300m
            memory: 70Mi
status: {}
