k8s/server/django-ks.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: server
  name: server
  namespace: server
spec:
  ports:
  - name: http-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: server
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: server
  name: server
  namespace: server
spec:
  selector:
    matchLabels:
      app: server
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "false"
      labels:
        app: server
    spec:
      containers:
      - image: auto
        name: istio-proxy
        resources:
          requests:
            cpu: 50m
            memory: 112Mi
      - env:
        - name: IS_K8S
          value: "true"
        - name: SECRET_KEY
          valueFrom:
            secretKeyRef:
              key: secret-key
              name: django-secret-key
        - name: ALLOWED_HOSTS
          value: hopic-sdpac.phac-aspc.alpha.canada.ca,34.149.100.163,localhost,34.152.0.41,41.0.152.34.bc.googleusercontent.com
        - name: SLACK_WEBHOOK_URL
          valueFrom:
            secretKeyRef:
              key: slack-url
              name: slack-webhook-url
        - name: DB_NAME
          value: cpho-phase2_db
        - name: DB_HOST
          value: cpho-postgres14-cluster-rw
        - name: DB_PORT
          value: "5432"
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              key: username
              name: cpho-postgres14-cluster-app
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: cpho-postgres14-cluster-app
        - name: PHAC_ASPC_OAUTH_PROVIDER
          value: microsoft
        - name: PHAC_ASPC_OAUTH_APP_CLIENT_ID
          valueFrom:
            secretKeyRef:
              key: client-id
              name: phac-aspc-oauth-config
        - name: PHAC_ASPC_OAUTH_APP_CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              key: client-secret
              name: phac-aspc-oauth-config
        - name: PHAC_ASPC_OAUTH_MICROSOFT_TENANT
          valueFrom:
            secretKeyRef:
              key: microsoft-tenant
              name: phac-aspc-oauth-config
        - name: ENABLE_LEGACY_LOG_IN
          value: "true"
        image: northamerica-northeast1-docker.pkg.dev/phx-01h4rr1468rj3v5k60b1vserd3/cpho-phase2-artifact-registry-for-cloud-run/cpho-phase2:a11y-testing-b627c606-1702064694
        name: server
        readinessProbe:
          httpGet:
            httpHeaders:
            - name: Host
              value: hopic-sdpac.phac-aspc.alpha.canada.ca
            path: /healthcheck
            port: 8080
          initialDelaySeconds: 35
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          requests:
            cpu: 200m
            memory: 400Mi
        securityContext:
          runAsUser: 5678
status: {}
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: server-virtual-service
  namespace: server
spec:
  gateways:
  - istio-ingress/public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /
    name: gateway-to-server
    route:
    - destination:
        host: server.server.svc.cluster.local
