k8s/server/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: server-virtual-service
  namespace: server
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/public-gateway
  http:
  - name: gateway-to-server
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: server.server.svc.cluster.local
